Fixed bug with image grid not showing
Because the behavior of themes was updated, the image grid didn't
show since its theme prop was always undefined

--- a/src/style/renderers/image-renderer.scss
+++ b/src/style/renderers/image-renderer.scss
@@ -8,11 +8,11 @@
   justify-self: center;
   align-items: center;
 
-  &.has-grid.light-grid {
+  &.has-grid.theme-light {
     background-image: url('../../assets/img/checker-theme-light.svg');
   }
 
-  &.has-grid.dark-grid {
+  &.has-grid.theme-dark {
     background-image: url('../../assets/img/checker-theme-dark.svg');
   }
 
